DUO116 fixed with https://github.com/dlint-py/dlint/pull/31
Signed-off-by: Thomas Sjögren <konstruktoid@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [flake8]
-# DUO116 fixed with https://github.com/dlint-py/dlint/pull/31
-ignore = DUO116, E501, S404, S603
+ignore = E501, S404, S603
 exclude =
     .git,
     __pycache__
