--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -1,14 +1,19 @@
-name: issue assignment
+name: Issue assignment
 
 on:
   issues:
     types: [opened]
 
+permissions:
+  contents: read
+
 jobs:
   auto-assign:
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     steps:
       - name: 'auto-assign issue'
-        uses: pozil/auto-assign-issue@v2.2.0
+        uses: pozil/auto-assign-issue@39c06395cbac76e79afc4ad4e5c5c6db6ecfdd2e # v2.2.0
         with:
           assignees: konstruktoid
