--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,10 +1,22 @@
 on: [push, pull_request]
-name: Konstruktoid Python linting
+name: Python linting
+
+permissions:
+  contents: read
+
 jobs:
-  konstruktoidPythonlinting:
+  PythonLinting:
     name: Python linting
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Konstruktoid Python linting
-        uses: konstruktoid/action-pylint@master
+      - name: Checkout repository
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get --assume-yes --no-install-recommends install python3-pip
+          python3 -m pip install --user -U -r requirements.txt
+
+      - name: Python linting
+        uses: konstruktoid/action-pylint@v2.0.0
