--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-argparse
-psutil
+argparse==1.4.0
+black==25.11.0
+click==8.3.1
+mypy-extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.5.0
+psutil==7.1.3
+pytokens==0.3.0
+ruff==0.14.5
+ty==0.0.1a27
